# recruitment-test-data-engineering

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
SQL/: init.sql
data/: summary_output.json
src/: config.py
src/ingest/: Dockerfile  ingest_main.py
src/output/: Dockerfile  output.py
